--- a/style.css
+++ b/style.css
@@ -290,4 +290,10 @@ font-size: 20px;
   display: block;
 }
 }
-
+#asobi img{
+width: 100%;
+}
+#map_s{
+  display: block;
+  justify-content:unset;
+}
